fix footer gap

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -13,9 +13,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 760px) {
 	.footer {
-		margin-left: 19px;
-		margin-bottom: 36px;
-		margin-top: 48px;
+		padding-top: 48px;
 	}
 
 	.footer__copyright {
